--- a/AR.js-master/aframe/SampleScene/index.html
+++ b/AR.js-master/aframe/SampleScene/index.html
@@ -122,7 +122,7 @@ if (markerFound == 1) {
 </a-assets>
 <!-- END: Unity Compiled Assets -->
 <!-- BEGIN: Add Image Target (marker) -->
-<a-marker id="marker" type="pattern" preset="custom" src="pattern-Print 1.patt" url="pattern-Print 1.patt" emitevents="true" button>
+<a-marker id="marker" type="pattern" preset="custom" src="pattern-942817465432d3c81c1c5d71c8a131e6.patt" url="pattern-942817465432d3c81c1c5d71c8a131e6.patt" emitevents="true" button>
 <!-- END: Add Image Target (marker) -->
 
 <!-- BEGIN: Unity Compiled Objects -->
