--- a/AR.js-master/aframe/SampleScene/index.html
+++ b/AR.js-master/aframe/SampleScene/index.html
@@ -30,10 +30,10 @@ Video_0.pause();
 button.addEventListener("click", function(evt){
 console.log("button clicked")
 if(Video_0.muted==true){
-button.innerHTML="Mute";
+button.innerHTML="Mutar";
 Video_0.muted=false;
 }else{
-button.innerHTML="Unmute";
+button.innerHTML="Desmutar";
 Video_0.muted=true;
 }
 });
