--- a/AR.js-master/aframe/SampleScene/index.html
+++ b/AR.js-master/aframe/SampleScene/index.html
@@ -124,7 +124,7 @@ if (markerFound == 1) {
 <!-- BEGIN: Add Image Target (marker) -->
 <a-nft
                 type="nft"
-                url= "https://guilhermebrendel.github.io/ar-project.github.io/AR.js-master/aframe/SampleScene/trex"
+                url="trex"
                 smooth="True"
                 smoothCount="10"
                 smoothTolerance="0.01"
