--- a/AR.js-master/aframe/SampleScene/index.html
+++ b/AR.js-master/aframe/SampleScene/index.html
@@ -134,6 +134,8 @@ if (markerFound == 1) {
 <!-- BEGIN: Unity Compiled Objects -->
 <a-video width="1" height="1" src="#Video_Asset_0" class="intersectable" position="0 0.189 -0.182" rotation="288.6238 0 0" color="#FFFFFF" 
 ></a-video>
+<a-box width="0.30683" height="0.30683" depth="0.30683" class="intersectable" position="0 0.353 0.312" rotation="0 0 0" color="#FFFFFF" 
+></a-box>
 <!-- END: Unity Compiled Objects -->
 
 <!-- BEGIN: Bottom HTML -->
