Mais um outro teste diferente

--- a/AR.js-master/aframe/SampleScene/index.html
+++ b/AR.js-master/aframe/SampleScene/index.html
@@ -124,7 +124,7 @@ if (markerFound == 1) {
 <!-- BEGIN: Add Image Target (marker) -->
 <a-nft
                 type="nft"
-                url="trex"
+                url="dino"
                 smooth="True"
                 smoothCount="10"
                 smoothTolerance="0.01"
